--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="choices">
     <div class="choice" id = "r">
-      <img src="images/rock.png" alt="">
+      <img src="pplexed.github.io/images/rock.png" alt="">
     </div>
     <div class="choice" id = "p">
       <img src="images/paper.png" alt="">
