--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <div class="floor"></div>
   <canvas id="canvas"></canvas>
 
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
