--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Game Animation</title>
-        <link rel='stylesheet' href='css/styles.css'>
+        <link rel='stylesheet' href='styles.css'>
     </head>
     <body>
         <div class='floor'></div>
         <canvas id='canvas' width='300' height='200'></canvas>
-      <script src='js/script.js'></script>
+      <script src='script.js'></script>
     </body>
 </html>
